# hare

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/utils/: crates.rs  github.rs  lyrics.rs  mod.rs  songwhip.rs  sourcegraph.rs  twitter.rs
