[package]
name = "hare"
version = "0.1.0"
authors = ["Joe Previte <jprevite@fb.com>", "jk jensen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
percent-encoding = "2.3.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
